MOB360%20UAT%2020161020/src/objects/RouteCust__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RouteCust</relationshipLabel>
        <relationshipName>RouteCust</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RouteCustID__c</fullName>
        <externalId>true</externalId>
        <label>RouteCustID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>RouteCust</relationshipLabel>
        <relationshipName>RouteCust</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WSLRNbrCustID__c</fullName>
        <label>WSLRNbrCustID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLRNbrRouteNbr__c</fullName>
        <label>WSLRNbrRouteNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RouteCust</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Route__c</columns>
        <columns>WSLRNbrRouteNbr__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>RouteCust ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RouteCust</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>